# sealog-cloud-shared

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
sealog_cloud/: OLD-pdf_utils.py  __init__.py  authentication.py  base_scraper.py  boat_international_scraper.py  crew_management_panel.py  database_manager.py  integration_guide.md  mobile_css.py  recipe_schema.py  reportlab_pdf_utils.py  secure_sessions.py  settings.py  utils.py  vessel_admin_components.py  vessel_components.py  vessel_database.py  vessel_enhancement.py  vessel_enhancement_ui.py  vessel_external_apis.py  vessel_merge.py  vessel_service.py  vessel_validation.py  yacht_data_enhancer.py
sealog_cloud/components/: contact_form.py  secure_sessions.py  settings.py
sealog_cloud/components/crew_settings/: __init__.py  crew_management_panel.py
sealog_cloud/core/: reportlab_pdf_utils.py  utils.py
sealog_cloud/schemas/: logperiod_schema.py  shiplog_schema.py  vessel_schema.py
sealog_cloud/shared/: vessel_admin_components.py  vessel_components.py  vessel_database.py  vessel_enhancement.py  vessel_enhancement_ui.py  vessel_external_apis.py  vessel_merge.py  vessel_service.py  vessel_validation.py
sealog_cloud/shared/external_apis/: marinetraffic_api.py  wordpress_importer.py
sealog_cloud/ui/: styling.py
