[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sealog-cloud-shared"
version = "0.1.0"
description = "SeaLog Cloud Shared - Maritime logging and vessel management system"
authors = [{name = "SeaLog", email = "admin@sealog.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["maritime", "logging", "vessel", "ship", "crew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "streamlit==1.44.1",
    "psycopg2-binary==2.9.7",
    "sqlalchemy==1.4.53",
    "python-dotenv==1.0.0",
    "pandas==2.2.3",
    "reportlab==4.4.1",
    "bcrypt==4.3.0",
    "requests==2.32.3",
    "beautifulsoup4==4.13.4",
    "python-dateutil==2.9.0.post0",
    "stripe==7.7.0",
    "google-auth-oauthlib==1.0.0",
    "google-auth-httplib2==0.1.0",
    "google-api-python-client==2.88.0",
    "folium==0.19.6",
    "plotly==6.0.1",
    "geopandas==1.0.1",
    "geopy==2.4.1",
    "pydantic==2.11.5",
    "flask==3.1.1",
    "flask-cors==6.0.0",
    "flask-restx==1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/sealog/sealog-cloud-shared"
Repository = "https://github.com/sealog/sealog-cloud-shared"

[tool.setuptools.packages.find]
where = ["."]
include = ["sealog_cloud*"]
exclude = ["tests*", "venv*", "env*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]