[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sealog-cloud-shared"
version = "0.1.8"
description = "SeaLog Cloud Shared - Maritime logging and vessel management system"
authors = [{name = "SeaLog", email = "admin@sealog.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["maritime", "logging", "vessel", "ship", "crew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "streamlit>=1.40.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "reportlab>=4.0.0",
    "bcrypt>=4.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "python-dateutil>=2.8.0",
    "stripe>=7.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.80.0",
    "folium>=0.15.0",
    "plotly>=5.0.0",
    "geopandas>=0.14.0",
    "geopy>=2.3.0",
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-restx>=1.0.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.0"
]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/sealog/sealog-cloud-shared"
Repository = "https://github.com/sealog/sealog-cloud-shared"

[tool.setuptools.packages.find]
where = ["."]
include = ["sealog_cloud*"]
exclude = ["tests*", "venv*", "env*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]